--- a/client/scss/module.scss
+++ b/client/scss/module.scss
@@ -36,8 +36,9 @@
   text-align: center;
   padding-top: 25px;
   font-size: 18px;
+  display: none;
 }
 
-.active-slide {
-  color: red;
+.calendar-item.active-slide {
+  display: block;
 }
